# space-invaders

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Rapport.odt  cmake_install.cmake  run.sh  space_invaders.cbp
docs/: Doxyfile  Rapport.odt
docs/html/: Controller_8h_source.html  Enemy_8h_source.html  Entity_8h_source.html  Game_8h_source.html  GreenAlienController_8h_source.html  GreenAlienView_8h_source.html  GreenAlien_8h_source.html  Observer_8h_source.html  PlayerLivesView_8h_source.html  PlayerShipController_8h_source.html  PlayerShipView_8h_source.html  PlayerShip_8h_source.html  ProjectileFactory_8h_source.html  PurpleAlienController_8h_source.html  PurpleAlienView_8h_source.html  PurpleAlien_8h_source.html  RedAlienController_8h_source.html  RedAlienView_8h_source.html  RedAlien_8h_source.html  ShieldController_8h_source.html  ShieldView_8h_source.html  Shield_8h_source.html  StandardEnemyProjectileController_8h_source.html  StandardEnemyProjectileView_8h_source.html  StandardEnemyProjectile_8h_source.html  StandardProjectileController_8h_source.html  StandardProjectileView_8h_source.html  StandardProjectile_8h_source.html  Subject_8h_source.html  View_8h_source.html  World_8h_source.html  annotated.html  classGame-members.html  classGame.html  classWorld-members.html  classWorld.html  classWorld__coll__graph.map  classWorld__coll__graph.md5  classWorld__inherit__graph.md5  classentities_1_1Controller-members.html  (+191 more)
docs/latex/: annotated.tex  classGame.tex  classWorld.tex  classWorld__coll__graph.md5  classWorld__inherit__graph.md5  classentities_1_1Controller.tex  classentities_1_1Controller__coll__graph.md5  classentities_1_1Controller__inherit__graph.md5  classentities_1_1Entity.tex  classentities_1_1Entity__coll__graph.md5  classentities_1_1Entity__inherit__graph.md5  classentities_1_1Observer.tex  classentities_1_1Observer__coll__graph.md5  classentities_1_1Observer__inherit__graph.md5  classentities_1_1Subject.tex  classentities_1_1Subject__inherit__graph.md5  classentities_1_1View.tex  classentities_1_1View__coll__graph.md5  classentities_1_1View__inherit__graph.md5  classentities_1_1enemies_1_1Enemy.tex  classentities_1_1enemies_1_1Enemy__coll__graph.md5  classentities_1_1enemies_1_1Enemy__inherit__graph.md5  classentities_1_1enemies_1_1green__alien_1_1GreenAlien.tex  classentities_1_1enemies_1_1green__alien_1_1GreenAlienController.tex  classentities_1_1enemies_1_1green__alien_1_1GreenAlienController__coll__graph.md5  classentities_1_1enemies_1_1green__alien_1_1GreenAlienController__inherit__graph.md5  classentities_1_1enemies_1_1green__alien_1_1GreenAlienView.tex  classentities_1_1enemies_1_1green__alien_1_1GreenAlienView__coll__graph.md5  (+77 more)
levels/: level0.json  level1.json  level_test.json  single_enemy.json  single_pentagon.json
resources/levels/: level0.json  level1.json  (+13 more)
settings/: standard_setting.json
src/: Game.cpp  Game.h  main.cpp
(+259 files in other folders)
